# django-recipes

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  DRF.postman_collection.json  Pipfile  manage.py  pyproject.toml  pytest.ini  readme.md  requirements.txt
.github/: settings.json
.github/workflows/: lint.yml  running-tests.yml
authors/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
authors/forms/: __init__.py  login.py  recipe_form.py  register_form.py
authors/migrations/: 0001_initial.py
authors/templates/authors/pages/: dashboard.html  dashboard_recipe.html  login.html  profile.html  register_view.html
authors/templates/authors/partials/: form_logout.html  login_messages.html
authors/tests/: test_author_register_form.py
authors/views/: __init__.py  all.py  api.py  dashboard_recipe.py  profile.py
base_static/global/css/: styles.css
base_static/global/js/: scripts.js
base_templates/global/: base.html
base_templates/global/partials/: footer.html  form.html  head.html  header.html  menu.html  messages.html  search.html
locale/pt_BR/LC_MESSAGES/: django.mo  django.po
project/: asgi.py  settings.py  urls.py  wsgi.py
project/settings/: __init__.py  assets.py  cors_headers.py  databases.py  debug_toolbar.py  environment.py  i18n.py  installed_apps.py  messages.py  middlewares.py  rest_framework.py  security.py
recipes/: admin.py  models.py  serializers.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_recipe_delete_recipes.py  0003_alter_recipe_cover.py  0004_alter_recipe_slug.py
recipes/templates/recipes/: home.html
recipes/templates/recipes/pages/: category.html  home.html  recipe-view.html  search.html  theory.html
recipes/templates/recipes/partials/: footer.html  head.html  header.html  messages.html  recipe.html
recipes/tests/: test_recipe_api.py  test_recipe_base.py  test_recipe_category_view.py  test_recipe_detail_view.py  test_recipe_home_view.py  test_recipe_model_category.py  test_recipe_model_recipe.py  test_recipe_models.py  test_recipe_search_view.py  test_recipe_urls.py  test_recipe_views.py
recipes/views/: api.py  site.py
tests/functional_tests/: base.py
tests/functional_tests/authors/: base.py  test_authors_login.py  test_authors_logout.py  test_authors_register.py
tests/functional_tests/recipes/: base.py  test_recipe_homepage.py
utils/: browser.py  django_forms.py  environment.py  pagination.py  test_pagination.py
utils/recipes/: factory.py
