[project]
name = "django-recipes"
version = "0.1.0"
description = "A basic application to manage recipes"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
  "asgiref==3.7.2",
  "astroid==3.0.2",
  "attrs==23.2.0",
  "certifi==2024.7.4",
  "click==8.1.7",
  "coverage==7.5.1",
  "decouple==0.0.7",
  "dill==0.3.8",
  "django==5.0.14",
  "django-cors-headers==4.3.1",
  "django-debug-toolbar==4.3.0",
  "djangorestframework==3.15.2",
  "djangorestframework-simplejwt==5.5.1",
  "exceptiongroup==1.2.1",
  "faker==22.5.1",
  "h11==0.16.0",
  "idna==3.7",
  "iniconfig==2.0.0",
  "mccabe==0.7.0",
  "mypy-extensions==1.0.0",
  "outcome==1.3.0.post0",
  "packaging==24.0",
  "parameterized==0.9.0",
  "pathspec==0.12.1",
  "pillow==10.3.0",
  "platformdirs==4.1.0",
  "pluggy==1.5.0",
  "pyjwt==2.8.0",
  "pysocks==1.7.1",
  "pytest==8.2.0",
  "pytest-cov==5.0.0",
  "pytest-django==4.8.0",
  "pytest-dotenv==0.5.2",
  "python-dateutil==2.8.2",
  "python-dotenv==1.0.1",
  "ruff>=0.14.14",
  "selenium==4.20.0",
  "six==1.16.0",
  "sniffio==1.3.1",
  "sortedcontainers==2.4.0",
  "sqlparse==0.5.0",
  "tomli==2.0.1",
  "tomlkit==0.12.3",
  "trio==0.25.0",
  "trio-websocket==0.11.1",
  "typing-extensions==4.9.0",
  "urllib3==2.6.3",
  "wsproto==1.2.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".agent",
  ".idea",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# syntax error annotations (`B`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and Python ebmeds are supported.
#
# This is currently disabled by default, but it is planned for this
# to be opted-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[dependency-groups]
dev = ["pre-commit>=4.5.1"]
